snackager/k8s/development/deployment-delay-probes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: snackager
spec:
  template:
    spec:
      containers:
      - name: snackager
        livenessProbe:
          initialDelaySeconds: 10
