snackager/k8s/development/ingress-spec.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: snackager
spec:
  rules:
    - host: snackager.expo.test
      http:
        paths:
        - backend:
            serviceName: snackager
            servicePort: 80
          path: /
